--- a/app/src/main/res/layout/activity_live_task.xml
+++ b/app/src/main/res/layout/activity_live_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LiveTask">
+    tools:context=".LiveTaskActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/liveTaskRecyclerView"
